FIX-security files and folders - FIX application-prepod , DELETE apliccation-dev.proprerties